# storage/api-docs/api-docs.json
@@ -110,27 +110,9 @@
                         }
                     },
                     {
-                        "name": "username",
+                        "name": "userName",
                         "in": "query",
                         "description": "Username Field",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "firstname",
-                        "in": "query",
-                        "description": "First Name",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "lastname",
-                        "in": "query",
-                        "description": "Last Name",
                         "required": true,
                         "schema": {
                             "type": "string"
@@ -189,14 +171,56 @@
             }
         },
         "/users": {
-            "post": {
-                "operationId": "ba6a7ce2b257dff29c6ba9c020e029bd",
+            "get": {
+                "summary": "Get list User",
+                "description": "Returns User data",
+                "operationId": "7e2f5799553ec93c9c43e2a58490d447",
                 "responses": {
                     "200": {
-                        "description": "Display a credential User."
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/User"
+                                }
+                            }
+                        }
                     },
-                    "201": {
-                        "description": "Successful operation"
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            },
+            "post": {
+                "summary": "Create User",
+                "description": "Returns User data",
+                "operationId": "a1fce870c566eb5fc0cf3178ec5d2fed",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/User"
+                                }
+                            }
+                        }
+                    },
+                    "202": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/User"
+                                }
+                            }
+                        }
                     },
                     "400": {
                         "description": "Bad Request"
@@ -242,6 +266,56 @@
             }
         },
         "/Users/{id}": {
+            "put": {
+                "summary": "Update existing User",
+                "description": "Returns updated User data",
+                "operationId": "2653d8527eb74964bb05ca4df3f8c19a",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "User id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/User"
+                                }
+                            }
+                        }
+                    },
+                    "202": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/User"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                }
+            },
             "delete": {
                 "summary": "Delete existing User",
                 "description": "Deletes a record and returns no content",
